fix spacing

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1046,7 +1046,7 @@ a.product__text {
     display: flex;
     align-items: center;
     position: absolute;
-    bottom: 0.5rem;
+    bottom: 1.5rem;
     left: 50%;
     transform: translateX(-50%);
     z-index: 2;
